# Complaint-Sentiment-Analysis-API

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker-compose/: app.yaml  logging.yaml  messaging.yaml  monitoring.yaml  volumes.yaml
docker-compose/logstash/: logstash.conf
docker-compose/prometheus/: prometheus.yml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 633f2ee942fe_create_complaint_table.py
src/application/builders/: complaint_builder.py
src/application/dto/: complaints.py
src/application/enrichers/: complaint_enricher.py
src/application/exceptions/: base.py  complaint.py
src/application/interfaces/repositories/: complaint_repository.py
src/application/schemas/: complaints.py
src/application/service/: complaint_service_impl.py
src/application/validators/: complaint_validator.py
src/data/: test.db
src/exceptions/: exception_handlers.py
src/infra/celery/: celery_app.py
src/infra/db/: __init__.py  base.py  db_halper.py
src/infra/elasticsearch/: fastapi-logs-policy.json  fastapi-logs-template.json
src/infra/exceptions/: base.py  external_api.py  mail.py
src/infra/http_clients/: ip_api_client.py  mistral_api_clients.py  ninjas_api_client.py  sentiment_api_client.py
src/infra/mail/: base.py  gmail.py
src/infra/mappers/: __init__.py  sentiment_mapper.py
src/infra/models/: complaints.py
src/infra/rabbitmq/: client.py  publisher.py
src/infra/repositories/: complaint_repository_impl.py
src/logger/: kafka_handler.py  logger.py  logging.yaml
src/settings/: config.py
(+4 files in other folders)
